After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 659562 - videorate: gst_mini_object_unref: assertion `GST_IS_MINI_OBJECT (mini_object)' failed
videorate: gst_mini_object_unref: assertion `GST_IS_MINI_OBJECT (mini_object)...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal major
: 0.10.36
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-09-20 09:54 UTC by Nicola
Modified: 2011-09-20 12:38 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Nicola 2011-09-20 09:54:04 UTC
Hi the following pipeline (public url) produce the described assertion with gstreamer git (works with last released version)

gdb --args gst-launch -e -v --gst-fatal-warnings souphttpsrc do-timestamp=true location=http://www.warwick.ac.uk/newwebcam/cgi-bin/webcam.pl?dummy=garb  is-live=true ! jpegparse ! videorate ! image/jpeg, width=640,height=480, framerate=5/1 ! matroskamux ! filesink location=/tmp/test.mkv


[Thread debugging using libthread_db enabled]
process 6776 is executing new program: /bin/bash
process 6776 is executing new program: /home/nicola/src/gstreamer/head/gstreamer/tools/.libs/lt-gst-launch-0.10
[Thread debugging using libthread_db enabled]
Impostazione della pipeline a PAUSED ...
[New Thread 0x7ffff2d9c700 (LWP 6794)]
La pipeline è viva e non necessita il PREROLL ...
Impostazione della pipeline a PLAYING ...
New clock: GstSystemClock
[New Thread 0x7ffff259b700 (LWP 6795)]
0:00:00.537076469  6776       0x6e5770 WARN               videorate gstvideorate.c:625:gst_video_rate_event:<videorate0> Got segment but doesn't have GST_FORMAT_TIME value

GStreamer-CRITICAL **: gst_mini_object_unref: assertion `GST_IS_MINI_OBJECT (mini_object)' failed
aborting...

Program received signal SIGABRT, Aborted.

Thread 140737267746560 (LWP 6794)

  • #0 raise
    at ../nptl/sysdeps/unix/sysv/linux/raise.c line 64
  • #1 abort
    at abort.c line 92
  • #2 g_logv
    from /lib/x86_64-linux-gnu/libglib-2.0.so.0
  • #3 g_log
    from /lib/x86_64-linux-gnu/libglib-2.0.so.0
  • #4 gst_event_unref
    at ../../../gst/gstevent.h line 413
  • #5 gst_base_transform_sink_event
    at gstbasetransform.c line 2062
  • #6 gst_pad_send_event
    at gstpad.c line 5425
  • #7 gst_pad_push_event
    at gstpad.c line 5277
  • #8 gst_jpeg_parse_sink_event
    at gstjpegparse.c line 979
  • #9 gst_pad_send_event
    at gstpad.c line 5425
  • #10 gst_pad_push_event
    at gstpad.c line 5277
  • #11 gst_base_src_loop
    at gstbasesrc.c line 2455
  • #12 gst_task_func
    at gsttask.c line 318
  • #13 ??
    from /lib/x86_64-linux-gnu/libglib-2.0.so.0
  • #14 ??
    from /lib/x86_64-linux-gnu/libglib-2.0.so.0
  • #15 start_thread
    at pthread_create.c line 304
  • #16 clone
    at ../sysdeps/unix/sysv/linux/x86_64/clone.S line 112
  • #17 ??

Comment 1 Tim-Philipp Müller 2011-09-20 12:38:01 UTC
commit f57bbc585d371a95c114e9257469f65311a6b895
Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
Date:   Tue Sep 20 13:35:55 2011 +0100

    videorate: don't unref event we don't own
    
    http://bugzilla.gnome.org/show_bug.cgi?id=659562