videorate: don't unref event we don't own

http://bugzilla.gnome.org/show_bug.cgi?id=659562